
public class Main {

    public static void main(String[] args) {
        metal_can a = new metal_can();
        matches b = new matches();
        Бумага c = new Бумага();
        battery d = new battery();
        lagerix Lager = new lagerix();
        Lake Lake = new Lake();
        Gedni Gedni = new Gedni();
        tent Tent = new tent();
        can Can = new can();
        Lager.surround();
        a.prints();
        b.prints();
        c.prints();
        Can.prints();
        Tent.prints();
        d.prints();
        c.show(true);
        Gedni.crazy_things();




    }
}
